--- a/style.css
+++ b/style.css
@@ -3,3 +3,9 @@ h1 {
     border: solid 2px black;
     width: 400px;
 }
+
+.love {
+    color: red;
+    border: solid 2px black;
+    width: 400px; 
+}
