--- a/style.css
+++ b/style.css
@@ -1,29 +1,3 @@
-.header {
-    font-family: 'Josefin Sans', sans-serif;
-    color: #222;
-    border: solid 2px red;
+body {
+    font-family: 'Dosis', sans-serif;
 }
-
-.anakin {
-    position: relative;
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-}
-
-.container {
-    /* margin: auto; */
-    position: relative;
-    color: yellow;
-    border: solid 1px blue;
-    text-align: center;
-    width: 80%;
-    }
-
-.class {
-    position: absolute;
-    bottom: 8px;
-    right: 16px;
-}    
-
